Finish updating to 7.1.